# legion

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
.claude-plugin/: marketplace.json
.githooks/: pre-commit  pre-push
.github/ISSUE_TEMPLATE/: implementation-task.md
.github/workflows/: ci.yml  release.yml
app/: .mcp.json  index.html  package.json  tsconfig.json  vite.config.ts
app/.rafters/: config.rafters.json
app/.rafters/output/: rafters.css  rafters.ts
app/.rafters/tokens/: breakpoint.rafters.json  color.rafters.json  depth.rafters.json  elevation.rafters.json  focus.rafters.json  motion.rafters.json  radius.rafters.json  semantic.rafters.json  shadow.rafters.json  spacing.rafters.json  typography.rafters.json
app/src/: App.tsx  index.css  main.tsx
app/src/components/: AgentStatusRow.tsx  BroadcastBar.tsx  FeedView.tsx  KanbanBoard.tsx  StatusBar.tsx  TaskCard.tsx
app/src/hooks/: useAgentStatus.ts
app/src/lib/: time.ts
app/src/services/: http-adapter.ts  index.ts  interface.ts  provider.tsx  types.ts
docs/plans/: 2026-03-08-water-cooler-design.md  2026-03-09-synapse-design.md  2026-03-09-synapse-implementation.md  2026-03-12-task-subcommand.md  2026-03-21-ai-first-kanban.md
docs/site/: architecture.md  cli-reference.md  concepts.md  getting-started.md  plugin-guide.md
plugin/.claude-plugin/: plugin.json
plugin/agents/: dungeon-master.md  legion-prime.md
plugin/channel/: event-bridge.ts  fakechat.ts  index.ts  instructions.ts  package.json  sse-client.ts  tools.ts  tsconfig.json  types.ts
plugin/commands/: boost.md  bullpen.md  consult.md  recall.md  reflect.md  snooze.md  surface.md  watch-sync.md
plugin/hooks/: bullpen-check.sh  hooks.json  post-compact.sh  precompact.sh  recall-first.sh  session-start.sh  setup-binary.sh  stop.sh
plugin/worksources/: github
src/: board.rs  db.rs  embed.rs  error.rs  health.rs  init.rs  kanban.rs  main.rs  recall.rs  reflect.rs  search.rs  serve.rs  signal.rs  stats.rs  status.rs  surface.rs  task.rs  testutil.rs  watch.rs  worksource.rs
static/: app.js  index.html  style.css
tests/: integration.rs
(+15 files in other folders)
